RF# S-007 refactored CompositeConstraint with Builder